prepended sqlrclient_ to auth modules

--- a/doc/admin/parts/sqlrelay-auths-users-passwordfiles.conf
+++ b/doc/admin/parts/sqlrelay-auths-users-passwordfiles.conf
@@ -3,11 +3,13 @@
 	...
 	<instance id="example" ... >
 		...
-		<users>
-			<user user="user1" password="[/usr/local/firstworks/etc/user1.pwd]"/>
-			<user user="user2" password="[/usr/local/firstworks/etc/user2.pwd]"/>
-			<user user="user3" password="[/usr/local/firstworks/etc/user3.pwd]"/>
-		</users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+				<user user="user1" password="[/usr/local/firstworks/etc/user1.pwd]"/>
+				<user user="user2" password="[/usr/local/firstworks/etc/user2.pwd]"/>
+				<user user="user3" password="[/usr/local/firstworks/etc/user3.pwd]"/>
+			</auth>
+		</auths>
 		...
 	</instance>
 	...
