--- a/doc/admin/parts/sqlrelay-autostart.conf
+++ b/doc/admin/parts/sqlrelay-autostart.conf
@@ -9,13 +9,13 @@
 
 	<instance id="sapexample" enabled="yes" dbase="sap" port="9001">
 		<connections>
-                        <connection string="sybase=/opt/sap;lang=en_US;server=EXAMPLEDB;user=exampleuser;password=examplepassword;db=exampledb"/>
+                        <connection string="sybase=/opt/sap;lang=en_US;server=SAPSERVER;user=sapuser;password=sappassword;db=sapdb"/>
 		</connections>
 	</instance>
 
 	<instance id="db2example" dbase="db2" port="9002">
 		<connections>
-                        <connection string="db=exampledb;user=db2inst1;password=db2inst1pass;lang=C;connecttimeout=0"/>
+                        <connection string="db=db2db;user=db2inst1;password=db2inst1pass;lang=C;connecttimeout=0"/>
 		</connections>
 	</instance>
 
