--- a/doc/admin/parts/sqlrelay-comprehensive.conf
+++ b/doc/admin/parts/sqlrelay-comprehensive.conf
@@ -5,37 +5,32 @@
 		connections="3" maxconnections="15" maxqueuelength="5" growby="1" ttl="60" softttl="0"
 		maxsessioncount="1000" endofsession="commit" sessiontimeout="600"
 		runasuser="nobody" runasgroup="nobody" cursors="5" maxcursors="10" cursors_growby="1"
-		authtier="connection" sessionhandler="process" handoff="pass" deniedips="" allowedips=""
+		sessionhandler="process" handoff="pass" deniedips="" allowedips=""
 		maxquerysize="65536" maxbindvars="256" maxstringbindvaluelength="4000" maxlobbindvaluelength="71680"
 		idleclienttimeout="-1" maxlisteners="-1" listenertimeout="0" reloginatstart="no"
 		fakeinputbindvariables="no" translatebindvariables="no" isolationlevel="read committed"
 		ignoreselectdatabase="no" waitfordowndatabase="yes">
-	       <users>
-		      <user user="user1" password="password1"/>
-		      <user user="user2" password="password2"/>
-		      <user user="user3" password="password3"/>
-	       </users>
-	       <session>
-		      <start>
-			     <runquery>alter session set nls_date_format='MM-DD-YYYY HH24:MI:SS'</runquery>
-		      </start>
-		      <end>
-			     <runquery>alter session set nls_date_format='DD-MON-YYYY'</runquery>
-		      </end>
-	       </session>
-	       <connections>
-		      <connection connectionid="db1"
-			string="user=exampleuser1;password=examplepassword1;oracle_sid=EXAMPLE1;"
-			metric="1" behindloadbalancer="no"/>
-		      <connection connectionid="db2"
-			string="user=exampleuser2;password=examplepassword2;oracle_sid=EXAMPLE2;"
-			metric="3" behindloadbalancer="no"/>
-		      <connection connectionid="db3"
-			string="user=exampleuser3;password=examplepassword3;oracle_sid=EXAMPLE3;"
-			metric="5" behindloadbalancer="no"/>
-		      <connection connectionid="db4"
-			string="user=exampleuser4;password=examplepassword4;oracle_sid=EXAMPLE4;"
-			metric="6" behindloadbalancer="no"/>
-	       </connections>
-        </instance>
+		<session>
+			<start>
+				<runquery>alter session set nls_date_format='MM-DD-YYYY HH24:MI:SS'</runquery>
+			</start>
+			<end>
+				<runquery>alter session set nls_date_format='DD-MON-YYYY'</runquery>
+			</end>
+		</session>
+		<connections>
+			<connection connectionid="db1"
+				string="user=exampleuser1;password=examplepassword1;oracle_sid=orcl1;"
+				metric="1" behindloadbalancer="no"/>
+			<connection connectionid="db2"
+				string="user=exampleuser2;password=examplepassword2;oracle_sid=orcl2;"
+				metric="3" behindloadbalancer="no"/>
+			<connection connectionid="db3"
+				string="user=exampleuser3;password=examplepassword3;oracle_sid=orcl3;"
+				metric="5" behindloadbalancer="no"/>
+			<connection connectionid="db4"
+				string="user=exampleuser4;password=examplepassword4;oracle_sid=orcl4;"
+				metric="6" behindloadbalancer="no"/>
+		</connections>
+	</instance>
 </instances>
