--- a/doc/admin/parts/sqlrelay-firebird.conf
+++ b/doc/admin/parts/sqlrelay-firebird.conf
@@ -2,7 +2,7 @@
 <instances>
 	<instance id="example" dbase="firebird">
 		<connections>
-                        <connection string="user=exampleuser;password=examplepassword;db=examplehost:/opt/firebird/exampledb.gdb"/>
+                        <connection string="user=firebirduser;password=firebirdpassword;db=firebirdhost:/opt/firebird/firebirddb.gdb"/>
 		</connections>
 	</instance>
 </instances>
