--- a/doc/admin/parts/sqlrelay-informix.conf
+++ b/doc/admin/parts/sqlrelay-informix.conf
@@ -2,7 +2,7 @@
 <instances>
 	<instance id="example" dbase="informix">
 		<connections>
-                        <connection string="informixdir=/opt/informix;servername=ol_informix1210;db=exampledb;user=exampleuser;password=examplepassword"/>
+                        <connection string="informixdir=/opt/informix;servername=ol_informix1210;db=informixdb;user=informixuser;password=informixpassword"/>
 		</connections>
 	</instance>
 </instances>
