--- a/doc/admin/parts/sqlrelay-krb.conf
+++ b/doc/admin/parts/sqlrelay-krb.conf
@@ -1,16 +1,18 @@
 <?xml version="1.0"?>
 <instances>
 	<instance id="example" krb="yes" krbservice="sqlrelay" krbkeytab="/usr/local/firstworks/etc/sqlrelay.keytab">
-		<users>
-			<user user="dmuse@KRB.FIRSTWORKS.COM"/>
-			<user user="kmuse@KRB.FIRSTWORKS.COM"/>
-			<user user="imuse@KRB.FIRSTWORKS.COM"/>
-			<user user="smuse@KRB.FIRSTWORKS.COM"/>
-			<user user="FIRSTWORKS.COM\dmuse"/>
-			<user user="FIRSTWORKS.COM\kmuse"/>
-			<user user="FIRSTWORKS.COM\imuse"/>
-			<user user="FIRSTWORKS.COM\smuse"/>
-		</users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+				<user user="dmuse@KRB.FIRSTWORKS.COM"/>
+				<user user="kmuse@KRB.FIRSTWORKS.COM"/>
+				<user user="imuse@KRB.FIRSTWORKS.COM"/>
+				<user user="smuse@KRB.FIRSTWORKS.COM"/>
+				<user user="FIRSTWORKS.COM\dmuse"/>
+				<user user="FIRSTWORKS.COM\kmuse"/>
+				<user user="FIRSTWORKS.COM\imuse"/>
+				<user user="FIRSTWORKS.COM\smuse"/>
+			</auth>
+		</auths>
 		<connections>
 			<connection string="user=scott;password=tiger;oracle_sid=orcl"/>
 		</connections>
