--- a/doc/admin/parts/sqlrelay-mssql-freetds.conf
+++ b/doc/admin/parts/sqlrelay-mssql-freetds.conf
@@ -2,7 +2,7 @@
 <instances>
 	<instance id="example" dbase="freetds">
 		<connections>
-                        <connection string="server=EXAMPLEDB;user=exampleuser;password=examplepassword;db=exampledb"/>
+                        <connection string="server=FREETDSSERVER;user=freetdsuser;password=freetdspassword;db=freetdsdb"/>
 		</connections>
 	</instance>
 </instances>
