--- a/doc/admin/parts/sqlrelay-mysql-tls-verify-ca.conf
+++ b/doc/admin/parts/sqlrelay-mysql-tls-verify-ca.conf
@@ -2,7 +2,7 @@
 <instances>
 	<instance id="example" dbase="mysql">
 		<connections>
-                        <connection string="user=exampleuser;password=examplepassword;host=examplehost;db=exampledb;sslmode=verify-ca;sslca=/etc/ca.pem"/>
+                        <connection string="user=mysqluser;password=mysqlpassword;host=mysqlhost;db=mysqldb;sslmode=verify-ca;sslca=/etc/ca.pem"/>
 		</connections>
 	</instance>
 </instances>
