--- a/doc/admin/parts/sqlrelay-odbc.conf
+++ b/doc/admin/parts/sqlrelay-odbc.conf
@@ -2,7 +2,7 @@
 <instances>
 	<instance id="example" dbase="odbc">
 		<connections>
-                        <connection string="dsn=exampledsn;user=exampleuser;password=exmaplepassword"/>
+                        <connection string="dsn=odbcdsn;user=odbcuser;password=odbcpassword"/>
 		</connections>
 	</instance>
 </instances>
