--- a/doc/admin/parts/sqlrelay-postgresql-tls-verify-full.conf
+++ b/doc/admin/parts/sqlrelay-postgresql-tls-verify-full.conf
@@ -2,7 +2,7 @@
 <instances>
 	<instance id="example" dbase="postgresql">
 		<connections>
-                        <connection string="user=exampleuser;password=examplepassword;host=examplehost.yourdomain.com;db=exampledb;sslmode=verify-full"/>
+                        <connection string="user=postgresqluser;password=postgresqlpassword;host=postgresqlhost.yourdomain.com;db=postgresqldb;sslmode=verify-full"/>
 		</connections>
 	</instance>
 </instances>
