--- a/doc/admin/parts/sqlrelay-pwdencs-stacked.conf
+++ b/doc/admin/parts/sqlrelay-pwdencs-stacked.conf
@@ -5,11 +5,13 @@
 			<passwordencryption module="rot" id="rot13enc" count="13"/>
 			<passwordencryption module="rot" id="rot10enc" count="10"/>
 		</passwordencryptions>
-		<users>
-			<user user="sqlruser" password="fdyecnffjbeq" passwordencryptionid="rot13enc"/>
-		</users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+				<user user="sqlruser" password="fdyecnffjbeq" passwordencryptionid="rot13enc"/>
+			</auth>
+		</auths>
 		<connections>
-			<connection connectionid="db" string="user=exampleuser;password=ohkwzvozkccgybn;..." passwordencryptionid="rot10enc"/>
+			<connection connectionid="db" string="user=oracleuser;password=ybkmvozkccgybn;..." passwordencryptionid="rot10enc"/>
 		</connections>
 	</instance>
 </instances>
