--- a/doc/admin/parts/sqlrelay-router-multipledb.conf
+++ b/doc/admin/parts/sqlrelay-router-multipledb.conf
@@ -20,9 +20,11 @@
 	<!-- This instance sends queries containing "mysqldb." to the mysql
 		database and "postgresqldb." to the postgresql database -->
 	<instance id="router" dbase="router">
-		<users>
-			<user user="routeruser" password="routerpassword"/>
-		</users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+				<user user="routeruser" password="routerpassword"/>
+			</auth>
+		</auths>
 		<routers>
 			<!-- send all mysqldb queries to "mysqldb" -->
 			<router module="regex" connectionid="mysqldb">
