--- a/doc/admin/parts/sqlrelay-routers-clientiplist.conf
+++ b/doc/admin/parts/sqlrelay-routers-clientiplist.conf
@@ -12,7 +12,7 @@
         <!-- This instance maintains connections to an SAP database. -->
         <instance id="sap" socket="/tmp/sap.socket" dbase="sap">
                 <connections>
-                        <connection string="sybase=/opt/sap;lang=en_US;server=EXAMPLEDB;user=exampleuser;password=examplepassword;db=exampledb;"/>
+                        <connection string="sybase=/opt/sap;lang=en_US;server=SAPSERVER;user=sapuser;password=sappassword;db=sapdb;"/>
                 </connections>
         </instance>
 
@@ -20,9 +20,11 @@
         <!-- This instance sends one set of users to the Oracle database and
                 all other users to the sap database. -->
         <instance id="router" dbase="router">
-                <users>
-                        <user user="routeruser" password="routerpassword"/>
-                </users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+                        	<user user="routeruser" password="routerpassword"/>
+			</auth>
+		</auths>
 		<routers>
 			<router module="clientiplist" connectionid="master">
 				<client ip="192.168.*.0-50"/>
@@ -33,7 +35,7 @@
 		</routers>
 		<connections>
 			<connection connectionid="oracle" string="socket=/tmp/oracle.socket;user=scott;password=tiger"/>
-			<connection connectionid="sap" string="socket=/tmp/sap.socket;user=exampleuser;password=examplepassword"/>
+			<connection connectionid="sap" string="socket=/tmp/sap.socket;user=sapuser;password=sappassword"/>
 		</connections>
         </instance>
 
