--- a/doc/admin/parts/sqlrelay-routers-regex.conf
+++ b/doc/admin/parts/sqlrelay-routers-regex.conf
@@ -33,9 +33,11 @@
                 instance which, in turn, distributes them over the "slave"
                 databases. -->
         <instance id="router" dbase="router">
-                <users>
-                        <user user="routeruser" password="routerpassword"/>
-                </users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+                        	<user user="routeruser" password="routerpassword"/>
+			</auth>
+		</auths>
 		<routers>
                         <!-- send all DML/DDL queries to "master"  -->
 			<router module="regex" connectionid="master">
