--- a/doc/admin/parts/sqlrelay-routers-usedatabase-alias.conf
+++ b/doc/admin/parts/sqlrelay-routers-usedatabase-alias.conf
@@ -4,9 +4,11 @@
 	... MySQL/PostgreSQL instance details omitted ...
 
 	<instance id="router" dbase="router">
-		<users>
-			<user user="routeruser" password="routerpassword"/>
-		</users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+                        	<user user="routeruser" password="routerpassword"/>
+			</auth>
+		</auths>
 		<routers>
 			<router module="usedatabase">
 				<map connectionid="mysqldb" db="db2" alias="mydb2"/>
