--- a/doc/admin/parts/sqlrelay-routers-usedatabase.conf
+++ b/doc/admin/parts/sqlrelay-routers-usedatabase.conf
@@ -20,9 +20,11 @@
 	<!-- This instance sends queries to databases hosted by the mysql
 		instance and postgresql instance based on "use ..." queries. -->
 	<instance id="router" dbase="router">
-		<users>
-			<user user="routeruser" password="routerpassword"/>
-		</users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+                        	<user user="routeruser" password="routerpassword"/>
+			</auth>
+		</auths>
 		<routers>
 			<router module="usedatabase"/>
 		</routers>
