--- a/doc/admin/parts/sqlrelay-routers-userlist.conf
+++ b/doc/admin/parts/sqlrelay-routers-userlist.conf
@@ -12,7 +12,7 @@
         <!-- This instance maintains connections to an SAP database. -->
         <instance id="sap" socket="/tmp/sap.socket" dbase="sap">
                 <connections>
-                        <connection string="sybase=/opt/sap;lang=en_US;server=EXAMPLEDB;user=exampleuser;password=examplepassword;db=exampledb;"/>
+                        <connection string="sybase=/opt/sap;lang=en_US;server=SAPSERVER;user=sapuser;password=sappassword;db=sapdb;"/>
                 </connections>
         </instance>
 
@@ -20,16 +20,18 @@
         <!-- This instance sends one set of users to the Oracle database and
                 all other users to the sap database. -->
         <instance id="router" dbase="router">
-                <users>
-                        <user user="oracleuser1" password="oraclepassword"/>
-                        <user user="oracleuser2" password="oraclepassword"/>
-                        <user user="oracleuser3" password="oraclepassword"/>
-                        <user user="oracleuser4" password="oraclepassword"/>
-                        <user user="sapuser1" password="sappassword"/>
-                        <user user="sapuser2" password="sappassword"/>
-                        <user user="sapuser3" password="sappassword"/>
-                        <user user="sapuser4" password="sappassword"/>
-                </users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+                        	<user user="oracleuser1" password="oraclepassword"/>
+                        	<user user="oracleuser2" password="oraclepassword"/>
+                        	<user user="oracleuser3" password="oraclepassword"/>
+                        	<user user="oracleuser4" password="oraclepassword"/>
+                        	<user user="sapuser1" password="sappassword"/>
+                        	<user user="sapuser2" password="sappassword"/>
+                        	<user user="sapuser3" password="sappassword"/>
+                        	<user user="sapuser4" password="sappassword"/>
+			</auth>
+		</auths>
 		<routers>
 			<router module="userlist" connectionid="oracle">
 				<user user="oracleuser1"/>
@@ -43,7 +45,7 @@
 		</routers>
 		<connections>
 			<connection connectionid="oracle" string="socket=/tmp/oracle.socket;user=scott;password=tiger"/>
-			<connection connectionid="sap" string="socket=/tmp/sap.socket;user=exampleuser;password=examplepassword"/>
+			<connection connectionid="sap" string="socket=/tmp/sap.socket;user=sapuser;password=sappassword"/>
 		</connections>
         </instance>
 
