--- a/doc/admin/parts/sqlrelay-sap.conf
+++ b/doc/admin/parts/sqlrelay-sap.conf
@@ -2,7 +2,7 @@
 <instances>
 	<instance id="example" dbase="sap">
 		<connections>
-                        <connection string="sybase=/opt/sap;lang=en_US;server=EXAMPLEDB;user=exampleuser;password=examplepassword;db=exampledb"/>
+                        <connection string="sybase=/opt/sap;lang=en_US;server=SAPSERVER;user=sapuser;password=sappassword;db=sapdb"/>
 		</connections>
 	</instance>
 </instances>
