--- a/doc/admin/parts/sqlrelay-sqlite-memory.conf
+++ b/doc/admin/parts/sqlrelay-sqlite-memory.conf
@@ -2,7 +2,7 @@
 <instances>
 	<instance id="example" dbase="sqlite" connections="1">
 		<connections>
-                        <connection string="db=:memory:;user=exampleuser;password=examplepassword"/>
+                        <connection string="db=:memory:;user=sqliteuser;password=sqlitepassword"/>
 		</connections>
 	</instance>
 </instances>
