--- a/doc/admin/parts/sqlrelay-sqlite.conf
+++ b/doc/admin/parts/sqlrelay-sqlite.conf
@@ -2,7 +2,7 @@
 <instances>
 	<instance id="example" dbase="sqlite">
 		<connections>
-                        <connection string="db=/var/sqlite/exampledb;user=exampleuser;password=examplepassword"/>
+                        <connection string="db=/var/sqlite/sqlitedb;user=sqliteuser;password=sqlitepassword"/>
 		</connections>
 	</instance>
 </instances>
