--- a/doc/admin/parts/sqlrelay-teradata.conf
+++ b/doc/admin/parts/sqlrelay-teradata.conf
@@ -2,7 +2,7 @@
 <instances>
 	<instance id="example" dbase="odbc">
 		<connections>
-			<connection string="dsn=teradata;user=exampleuser;password=examplepassword"/>
+			<connection string="dsn=teradata;user=teradatauser;password=teradatapassword"/>
 		</connections>
 	</instance>
 <instances>
