--- a/doc/admin/parts/sqlrelay-tls-validate.conf
+++ b/doc/admin/parts/sqlrelay-tls-validate.conf
@@ -5,12 +5,14 @@
 		tlscert="/usr/local/firstworks/etc/sqlrserver.pem"
 		tlsvalidate="yes"
 		tlsca="/usr/local/firstworks/etc/myca.pem">
-		<users>
-			<user user="sqlrclient1.firstworks.com"/>
-			<user user="sqlrclient2.firstworks.com"/>
-			<user user="sqlrclient3.firstworks.com"/>
-			<user user="sqlrclient4.firstworks.com"/>
-		</users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+				<user user="sqlrclient1.firstworks.com"/>
+				<user user="sqlrclient2.firstworks.com"/>
+				<user user="sqlrclient3.firstworks.com"/>
+				<user user="sqlrclient4.firstworks.com"/>
+			</auth>
+		</auths>
 		<connections>
 			<connection string="user=scott;password=tiger;oracle_sid=orcl"/>
 		</connections>
