--- a/src/auths/Makefile
+++ b/src/auths/Makefile
@@ -12,36 +12,36 @@ include ../../config.mk
 
 all: all-base $(AUTHALLOPTIONALTARGETS)
 
-all-base: $(SQLR)auth_connectstrings.$(LIBEXT) \
-		$(SQLR)auth_userlist.$(LIBEXT) \
-		$(SQLR)auth_database.$(LIBEXT) \
-		$(SQLR)auth_proxied.$(LIBEXT) \
+all-base: $(SQLR)auth_sqlrclient_connectstrings.$(LIBEXT) \
+		$(SQLR)auth_sqlrclient_userlist.$(LIBEXT) \
+		$(SQLR)auth_sqlrclient_database.$(LIBEXT) \
+		$(SQLR)auth_sqlrclient_proxied.$(LIBEXT) \
 		$(SQLR)auth_mysql_userlist.$(LIBEXT) \
 		$(SQLR)auth_mysql_database.$(LIBEXT) \
 		$(SQLR)auth_postgresql_userlist.$(LIBEXT) \
 		$(SQLR)auth_oracle_userlist.$(LIBEXT) \
 		$(SQLR)auth_teradata_sidechannel.$(LIBEXT) \
 
-all-sqlrelay: $(SQLR)auth_sqlrelay.$(LIBEXT)
+all-sqlrelay: $(SQLR)auth_sqlrclient_sqlrelay.$(LIBEXT)
 
 clean:
 	$(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
 	$(RMTREE) .libs
 
-$(SQLR)auth_connectstrings.$(LIBEXT): connectstrings.cpp connectstrings.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ connectstrings.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+$(SQLR)auth_sqlrclient_connectstrings.$(LIBEXT): sqlrclient_connectstrings.cpp sqlrclient_connectstrings.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ sqlrclient_connectstrings.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
-$(SQLR)auth_userlist.$(LIBEXT): userlist.cpp userlist.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ userlist.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+$(SQLR)auth_sqlrclient_userlist.$(LIBEXT): sqlrclient_userlist.cpp sqlrclient_userlist.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ sqlrclient_userlist.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
-$(SQLR)auth_database.$(LIBEXT): database.cpp database.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ database.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+$(SQLR)auth_sqlrclient_database.$(LIBEXT): sqlrclient_database.cpp sqlrclient_database.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ sqlrclient_database.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
-$(SQLR)auth_proxied.$(LIBEXT): proxied.cpp proxied.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ proxied.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+$(SQLR)auth_sqlrclient_proxied.$(LIBEXT): sqlrclient_proxied.cpp sqlrclient_proxied.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ sqlrclient_proxied.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
-$(SQLR)auth_sqlrelay.$(LIBEXT): sqlrelay.cpp sqlrelay.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ sqlrelay.$(OBJ) $(LDFLAGS) $(SQLRAUTH_SQLRELAYLIBS) $(PLUGINLIBS) $(MODLINKFLAGS)
+$(SQLR)auth_sqlrclient_sqlrelay.$(LIBEXT): sqlrclient_sqlrelay.cpp sqlrclient_sqlrelay.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ sqlrclient_sqlrelay.$(OBJ) $(LDFLAGS) $(SQLRAUTH_SQLRELAYLIBS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
 $(SQLR)auth_mysql_userlist.$(LIBEXT): mysql_userlist.cpp mysql_userlist.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ mysql_userlist.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
@@ -62,11 +62,11 @@ install: $(INSTALLLIB)
 
 installdll:
 	$(MKINSTALLDIRS) $(libexecdir)
-	$(LTINSTALL) $(CP) $(SQLR)auth_connectstrings.$(LIBEXT) $(libexecdir)
-	$(LTINSTALL) $(CP) $(SQLR)auth_userlist.$(LIBEXT) $(libexecdir)
-	$(LTINSTALL) $(CP) $(SQLR)auth_database.$(LIBEXT) $(libexecdir)
-	$(LTINSTALL) $(CP) $(SQLR)auth_proxied.$(LIBEXT) $(libexecdir)
-	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrelay.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_connectstrings.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_userlist.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_database.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_proxied.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_sqlrelay.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)auth_mysql_userlist.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)auth_mysql_database.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)auth_postgresql_userlist.$(LIBEXT) $(libexecdir)
@@ -75,22 +75,22 @@ installlib: $(INSTALLSHAREDLIB) $(AUTHINSTALLSHAREDLIBOPTIONALTARGETS)
 
 installsharedlib:
 	$(MKINSTALLDIRS) $(libexecdir)
-	$(LTINSTALL) $(CP) $(SQLR)auth_connectstrings.$(LIBEXT) $(libexecdir)
-	$(RM) $(libexecdir)/$(SQLR)auth_connectstrings.a
-	$(RM) $(libexecdir)/$(SQLR)auth_connectstrings.$(LIBEXT)
-	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_connectstrings.so so $(MODULESUFFIX)
-	$(LTINSTALL) $(CP) $(SQLR)auth_userlist.$(LIBEXT) $(libexecdir)
-	$(RM) $(libexecdir)/$(SQLR)auth_userlist.a
-	$(RM) $(libexecdir)/$(SQLR)auth_userlist.$(LIBEXT)
-	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_userlist.so so $(MODULESUFFIX)
-	$(LTINSTALL) $(CP) $(SQLR)auth_database.$(LIBEXT) $(libexecdir)
-	$(RM) $(libexecdir)/$(SQLR)auth_database.a
-	$(RM) $(libexecdir)/$(SQLR)auth_database.$(LIBEXT)
-	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_database.so so $(MODULESUFFIX)
-	$(LTINSTALL) $(CP) $(SQLR)auth_proxied.$(LIBEXT) $(libexecdir)
-	$(RM) $(libexecdir)/$(SQLR)auth_proxied.a
-	$(RM) $(libexecdir)/$(SQLR)auth_proxied.$(LIBEXT)
-	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_proxied.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_connectstrings.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)auth_sqlrclient_connectstrings.a
+	$(RM) $(libexecdir)/$(SQLR)auth_sqlrclient_connectstrings.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_sqlrclient_connectstrings.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_userlist.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)auth_sqlrclient_userlist.a
+	$(RM) $(libexecdir)/$(SQLR)auth_sqlrclient_userlist.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_sqlrclient_userlist.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_database.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)auth_sqlrclient_database.a
+	$(RM) $(libexecdir)/$(SQLR)auth_sqlrclient_database.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_sqlrclient_database.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_proxied.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)auth_sqlrclient_proxied.a
+	$(RM) $(libexecdir)/$(SQLR)auth_sqlrclient_proxied.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_sqlrclient_proxied.so so $(MODULESUFFIX)
 	$(LTINSTALL) $(CP) $(SQLR)auth_mysql_userlist.$(LIBEXT) $(libexecdir)
 	$(RM) $(libexecdir)/$(SQLR)auth_mysql_userlist.a
 	$(RM) $(libexecdir)/$(SQLR)auth_mysql_userlist.$(LIBEXT)
@@ -106,24 +106,29 @@ installsharedlib:
 
 installsharedlib-sqlrelay:
 	$(MKINSTALLDIRS) $(libexecdir)
-	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrelay.$(LIBEXT) $(libexecdir)
-	$(RM) $(libexecdir)/$(SQLR)auth_sqlrelay.a
-	$(RM) $(libexecdir)/$(SQLR)auth_sqlrelay.$(LIBEXT)
-	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_sqlrelay.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_sqlrelay.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)auth_sqlrclient_sqlrelay.a
+	$(RM) $(libexecdir)/$(SQLR)auth_sqlrclient_sqlrelay.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_sqlrclient_sqlrelay.so so $(MODULESUFFIX)
 
 uninstall:
 	$(RM) $(libexecdir)/$(SQLR)auth_default.* \
+		$(libexecdir)/$(SQLR)auth_sqlrclient_connectstrings.* \
+		$(libexecdir)/$(SQLR)auth_sqlrclient_userlist.* \
+		$(libexecdir)/$(SQLR)auth_sqlrclient_database.* \
+		$(libexecdir)/$(SQLR)auth_sqlrclient_proxied.* \
+		$(libexecdir)/$(SQLR)auth_sqlrclient_sqlrelay.* \
+		$(libexecdir)/$(SQLR)auth_krb_userlist.* \
+		$(libexecdir)/$(SQLR)auth_tls_userlist.* \
+		$(libexecdir)/$(SQLR)auth_kerberos_userlist.* \
+		$(libexecdir)/$(SQLR)auth_mysql_userlist.* \
+		$(libexecdir)/$(SQLR)auth_mysql_database.* \
+		$(libexecdir)/$(SQLR)auth_postgresql_userlist.* \
 		$(libexecdir)/$(SQLR)auth_connectstrings.* \
 		$(libexecdir)/$(SQLR)auth_userlist.* \
 		$(libexecdir)/$(SQLR)auth_database.* \
 		$(libexecdir)/$(SQLR)auth_proxied.* \
-		$(libexecdir)/$(SQLR)auth_krb_userlist.* \
-		$(libexecdir)/$(SQLR)auth_tls_userlist.* \
-		$(libexecdir)/$(SQLR)auth_kerberos_userlist.* \
 		$(libexecdir)/$(SQLR)auth_sqlrelay.* \
-		$(libexecdir)/$(SQLR)auth_mysql_userlist.* \
-		$(libexecdir)/$(SQLR)auth_mysql_database.* \
-		$(libexecdir)/$(SQLR)auth_postgresql_userlist.* \
 		$(libexecdir)/sqlrauth_default.* \
 		$(libexecdir)/sqlrauth_userlist.* \
 		$(libexecdir)/sqlrauth_database.* \
