--- a/doc/admin/parts/sqlrelay-auths-users-passwordfiles-passwordpath.conf
+++ b/doc/admin/parts/sqlrelay-auths-users-passwordfiles-passwordpath.conf
@@ -3,11 +3,13 @@
 	...
 	<instance id="example" ... passwordpath="/usr/local/firstworks/etc">
 		...
-		<users>
-			<user user="user1" password="[user1.pwd]"/>
-			<user user="user2" password="[user2.pwd]"/>
-			<user user="user3" password="[user3.pwd]"/>
-		</users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+				<user user="user1" password="[user1.pwd]"/>
+				<user user="user2" password="[user2.pwd]"/>
+				<user user="user3" password="[user3.pwd]"/>
+			</auth>
+		</auths>
 		...
 	</instance>
 	...
