--- a/doc/admin/parts/sqlrelay-auths-users.conf
+++ b/doc/admin/parts/sqlrelay-auths-users.conf
@@ -3,11 +3,13 @@
 	...
 	<instance id="example" ... >
 		...
-		<users>
-			<user user="user1" password="password1"/>
-			<user user="user2" password="password2"/>
-			<user user="user3" password="password3"/>
-		</users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+				<user user="user1" password="password1"/>
+				<user user="user2" password="password2"/>
+				<user user="user3" password="password3"/>
+			</auth>
+		</auths>
 		...
 	</instance>
 	...
