--- a/doc/admin/parts/sqlrelay-multiplesap.conf
+++ b/doc/admin/parts/sqlrelay-multiplesap.conf
@@ -2,7 +2,7 @@
 <instances>
 	<instance id="sapexample" dbase="sap" port="9001">
 		<connections>
-                        <connection string="sybase=/opt/sap;lang=en_US;server=EXAMPLEDB;user=exampleuser;password=examplepassword;db=exampledb"/>
+                        <connection string="sybase=/opt/sap;lang=en_US;server=SAPSERVER;user=sapuser;password=sappassword;db=sapdb"/>
 		</connections>
 	</instance>
 </instances>
