--- a/doc/admin/parts/sqlrelay-postgresql-tls-verify-ca.conf
+++ b/doc/admin/parts/sqlrelay-postgresql-tls-verify-ca.conf
@@ -2,7 +2,7 @@
 <instances>
 	<instance id="example" dbase="postgresql">
 		<connections>
-                        <connection string="user=exampleuser;password=examplepassword;host=examplehost;db=exampledb;sslmode=verify-ca"/>
+                        <connection string="user=postgresqluser;password=postgresqlpassword;host=postgresqlhost;db=postgresqldb;sslmode=verify-ca"/>
 		</connections>
 	</instance>
 </instances>
