--- a/doc/admin/parts/sqlrelay-pwdencs-des.conf
+++ b/doc/admin/parts/sqlrelay-pwdencs-des.conf
@@ -4,9 +4,11 @@
 		<passwordencryptions>
 			<passwordencryption module="crypt" id="cryptenc" salt="sr"/>
 		</passwordencryptions>
-		<users>
-			<user user="sqlruser" password="nIdCgucqUQg" passwordencryptionid="cryptenc"/>
-		</users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+				<user user="sqlruser" password="nIdCgucqUQg" passwordencryptionid="cryptenc"/>
+			</auth>
+		</auths>
 		...
 	</instance>
 </instances>
