--- a/doc/admin/parts/sqlrelay-routers-clientinfolist.conf
+++ b/doc/admin/parts/sqlrelay-routers-clientinfolist.conf
@@ -3,9 +3,6 @@
 
         <!-- This instance maintains connections to an Oracle database. -->
         <instance id="oracle" socket="/tmp/oracle.socket" dbase="oracle">
-                <users>
-                        <user user="oracleuser" password="oraclepassword"/>
-                </users>
                 <connections>
                         <connection string="user=scott;password=tiger;oracle_sid=orcl"/>
                 </connections>
@@ -15,7 +12,7 @@
         <!-- This instance maintains connections to an SAP database. -->
         <instance id="sap" socket="/tmp/sap.socket" dbase="sap">
                 <connections>
-                        <connection string="sybase=/opt/sap;lang=en_US;server=EXAMPLEDB;user=exampleuser;password=examplepassword;db=exampledb;"/>
+                        <connection string="sybase=/opt/sap;lang=en_US;server=SAPSERVER;user=sapuser;password=sappassword;db=sapdb;"/>
                 </connections>
         </instance>
 
@@ -23,9 +20,11 @@
         <!-- This instance sends one set of users to the Oracle database and
                 all other users to the sap database. -->
         <instance id="router" dbase="router">
-                <users>
-                        <user user="routeruser" password="routerpassword"/>
-                </users>
+		<auths>
+			<auth module="sqlrclient_userlist">
+                        	<user user="routeruser" password="routerpassword"/>
+			</auth>
+		</auths>
 		<routers>
 			<router module="clientinfolist" connectionid="master">
 				<clientinfo pattern=".*oracle.*"/>
@@ -37,7 +36,7 @@
 		</routers>
 		<connections>
 			<connection connectionid="oracle" string="socket=/tmp/oracle.socket;user=scott;password=tiger"/>
-			<connection connectionid="sap" string="socket=/tmp/sap.socket;user=exampleuser;password=examplepassword"/>
+			<connection connectionid="sap" string="socket=/tmp/sap.socket;user=sapuser;password=sappassword"/>
 		</connections>
         </instance>
 
