updated docs to use listener/listeners tag updated test configs similarly

--- a/doc/admin/parts/sqlrelay-addresses.conf
+++ b/doc/admin/parts/sqlrelay-addresses.conf
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <instances>
-	<instance id="example" addresses="192.168.1.50,192.168.1.51">
+	<instance id="example">
+		<listeners>
+			<listener protocol="sqlrclient" addresses="192.168.1.50,192.168.1.51"/>
+		</listeners>
 		<connections>
                         <connection string="user=scott;password=tiger;oracle_sid=orcl"/>
 		</connections>
