--- a/doc/admin/parts/sqlrelay-autostart.conf
+++ b/doc/admin/parts/sqlrelay-autostart.conf
@@ -1,19 +1,28 @@
 <?xml version="1.0"?>
 <instances>
 
-	<instance id="oracleexample" enabled="yes" port="9000">
+	<instance id="oracleexample" enabled="yes">
+		<listeners>
+			<listener port="9000"/>
+		</listeners>
 		<connections>
                         <connection string="user=scott;password=tiger;oracle_sid=orcl"/>
 		</connections>
 	</instance>
 
-	<instance id="sapexample" enabled="yes" dbase="sap" port="9001">
+	<instance id="sapexample" enabled="yes" dbase="sap">
+		<listeners>
+			<listener port="9001"/>
+		</listeners>
 		<connections>
                         <connection string="sybase=/opt/sap;lang=en_US;server=SAPSERVER;user=sapuser;password=sappassword;db=sapdb"/>
 		</connections>
 	</instance>
 
-	<instance id="db2example" dbase="db2" port="9002">
+	<instance id="db2example" dbase="db2">
+		<listeners>
+			<listener port="9002"/>
+		</listeners>
 		<connections>
                         <connection string="db=db2db;user=db2inst1;password=db2inst1pass;lang=C;connecttimeout=0"/>
 		</connections>
