--- a/doc/admin/parts/sqlrelay-multipledb2.conf
+++ b/doc/admin/parts/sqlrelay-multipledb2.conf
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <instances>
-	<instance id="db2example" dbase="db2" port="9002">
+	<instance id="db2example" dbase="db2">
+		<listeners>
+			<listener port="9002"/>
+		</listeners>
 		<connections>
                         <connection string="db=exampledb;user=db2inst1;password=db2inst1pass;lang=C;connecttimeout=0"/>
 		</connections>
