--- a/doc/admin/parts/sqlrelay-multipleoracle.conf
+++ b/doc/admin/parts/sqlrelay-multipleoracle.conf
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <instances>
-	<instance id="oracleexample" port="9000">
+	<instance id="oracleexample">
+		<listeners>
+			<listener port="9000"/>
+		</listeners>
 		<connections>
                         <connection string="user=scott;password=tiger;oracle_sid=orcl"/>
 		</connections>
