--- a/doc/admin/parts/sqlrelay-multiplesap.conf
+++ b/doc/admin/parts/sqlrelay-multiplesap.conf
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <instances>
-	<instance id="sapexample" dbase="sap" port="9001">
+	<instance id="sapexample" dbase="sap">
+		<listeners>
+			<listener port="9001"/>
+		</listeners>
 		<connections>
                         <connection string="sybase=/opt/sap;lang=en_US;server=SAPSERVER;user=sapuser;password=sappassword;db=sapdb"/>
 		</connections>
