--- a/test/sqlrelay.conf.d/oracle.conf.in
+++ b/test/sqlrelay.conf.d/oracle.conf.in
@@ -1,7 +1,10 @@
 <?xml version="1.0"?>
 <instances>
 
-	<instance id="oracletest" port="9000" socket="/tmp/test.socket" dbase="oracle">
+	<instance id="oracletest" dbase="oracle">
+		<listeners>
+			<listener port="9000" socket="/tmp/test.socket"/>
+		</listeners>
 		<users>
 			<user user="testuser" password="testpassword"/>
 		</users>
@@ -10,7 +13,10 @@
 		</connections>
 	</instance>
 
-	<instance id="oracle12ctest" port="9000" socket="/tmp/test.socket" dbase="oracle">
+	<instance id="oracle12ctest" dbase="oracle">
+		<listeners>
+			<listener port="9000" socket="/tmp/test.socket"/>
+		</listeners>
 		<users>
 			<user user="testuser" password="testpassword"/>
 		</users>
@@ -19,7 +25,10 @@
 		</connections>
 	</instance>
 
-	<instance id="oracle11gtest" port="9000" socket="/tmp/test.socket" dbase="oracle">
+	<instance id="oracle11gtest" dbase="oracle">
+		<listeners>
+			<listener port="9000" socket="/tmp/test.socket"/>
+		</listeners>
 		<users>
 			<user user="testuser" password="testpassword"/>
 		</users>
@@ -28,7 +37,10 @@
 		</connections>
 	</instance>
 
-	<instance id="oracle10gtest" port="9000" socket="/tmp/test.socket" dbase="oracle">
+	<instance id="oracle10gtest" dbase="oracle">
+		<listeners>
+			<listener port="9000" socket="/tmp/test.socket"/>
+		</listeners>
 		<users>
 			<user user="testuser" password="testpassword"/>
 		</users>
