--- a/test/sqlrelay.conf.d/sqlite.conf.in
+++ b/test/sqlrelay.conf.d/sqlite.conf.in
@@ -1,7 +1,10 @@
 <?xml version="1.0"?>
 <instances>
 
-	<instance id="sqlitetest" port="9000" socket="/tmp/test.socket" dbase="sqlite">
+	<instance id="sqlitetest" dbase="sqlite">
+		<listeners>
+			<listener port="9000" socket="/tmp/test.socket"/>
+		</listeners>
 		<connections>
 			<connection string="db=@abs_top_builddir@/test/sqlrelay.conf.d/sqlite/sqlite.db;user=testuser;password=testpassword"/>
 		</connections>
