--- a/doc/admin/parts/sqlrelay-comprehensive.conf
+++ b/doc/admin/parts/sqlrelay-comprehensive.conf
@@ -1,7 +1,6 @@
 <?xml version="1.0"?>
 <instances>
 	<instance id="example" enabled="yes" dbase="oracle"
-		port="9000" socket="/tmp/example.socket"
 		connections="3" maxconnections="15" maxqueuelength="5" growby="1" ttl="60" softttl="0"
 		maxsessioncount="1000" endofsession="commit" sessiontimeout="600"
 		runasuser="nobody" runasgroup="nobody" cursors="5" maxcursors="10" cursors_growby="1"
@@ -10,6 +9,9 @@
 		idleclienttimeout="-1" maxlisteners="-1" listenertimeout="0" reloginatstart="no"
 		fakeinputbindvariables="no" translatebindvariables="no" isolationlevel="read committed"
 		ignoreselectdatabase="no" waitfordowndatabase="yes">
+		<listeners>
+			<listener port="9000" socket="/tmp/example.socket"/>
+		</listeners>
 		<session>
 			<start>
 				<runquery>alter session set nls_date_format='MM-DD-YYYY HH24:MI:SS'</runquery>
