--- a/doc/admin/parts/sqlrelay-port.conf
+++ b/doc/admin/parts/sqlrelay-port.conf
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <instances>
-	<instance id="example" port="9001">
+	<instance id="example">
+		<listeners>
+			<listener protocol="sqlrclient" port="9001"/>
+		</listeners>
 		<connections>
                         <connection string="user=scott;password=tiger;oracle_sid=orcl"/>
 		</connections>
