--- a/doc/admin/parts/sqlrelay-routers-usedatabase.conf
+++ b/doc/admin/parts/sqlrelay-routers-usedatabase.conf
@@ -2,7 +2,10 @@
 <instances>
 
 	<!-- This instance maintains connections to a MySQL database -->
-	<instance id="mysqldb" port="" socket="/tmp/mysqldb.socket" dbase="mysql">
+	<instance id="mysqldb" dbase="mysql">
+		<listeners>
+			<listener port="" socket="/tmp/mysqldb.socket"/>
+		</listeners>
 		<connections>
 			<connection string="user=mysqldbuser;password=mysqldbpassword;host=mysqldb;db=mysqldb;"/>
 		</connections>
@@ -10,7 +13,10 @@
 
 
 	<!-- This instance maintains connections to a PostgreSQL database -->
-	<instance id="postgresqldb" port="" socket="/tmp/postgresqldb.socket" dbase="postgresql">
+	<instance id="postgresqldb" dbase="postgresql">
+		<listeners>
+			<listener port="" socket="/tmp/postgresqldb.socket"/>
+		</listeners>
 		<connections>
 			<connection string="user=postgresqldbuser;password=postgresqldbpassword;host=postgresqldb;db=postgresqldb;"/>
 		</connections>
