--- a/doc/admin/parts/sqlrelay-socket.conf
+++ b/doc/admin/parts/sqlrelay-socket.conf
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <instances>
-	<instance id="example" socket="/tmp/example.socket">
+	<instance id="example">
+		<listeners>
+			<listener protocol="sqlrclient" socket="/tmp/example.socket">
+		</listener>
 		<connections>
                         <connection string="user=scott;password=tiger;oracle_sid=orcl"/>
 		</connections>
