--- a/test/sqlrelay.conf.d/mssql.conf.in
+++ b/test/sqlrelay.conf.d/mssql.conf.in
@@ -1,13 +1,19 @@
 <?xml version="1.0"?>
 <instances>
 
-	<instance id="mssqltest" port="9000" socket="/tmp/test.socket" dbase="odbc">
+	<instance id="mssqltest" dbase="odbc">
+		<listeners>
+			<listener port="9000" socket="/tmp/test.socket"/>
+		</listeners>
 		<connections>
 			<connection string="dsn=mssqlodbc;user=testuser;password=testpassword;lastinsertidquery=select @@identity"/>
 		</connections>
 	</instance>
 
-	<instance id="emojitest" port="9000" socket="/tmp/test.socket" dbase="odbc" translatebindvariables="yes">
+	<instance id="emojitest" dbase="odbc" translatebindvariables="yes">
+		<listeners>
+			<listener port="9000" socket="/tmp/test.socket"/>
+		</listeners>
 		<connections>
 			<connection string="dsn=mssqlodbc;user=testuser;password=testpassword;lastinsertidquery=select @@identity;ncharencoding=UTF-16"/>
 		</connections>
