--- a/test/sqlrelay.conf.d/mysqldeadlockreplay.conf.in
+++ b/test/sqlrelay.conf.d/mysqldeadlockreplay.conf.in
@@ -1,7 +1,10 @@
 <?xml version="1.0"?>
 <instances>
 
-	<instance id="mysqldeadlockreplaytest" port="9000" socket="/tmp/test.socket" dbase="mysql">
+	<instance id="mysqldeadlockreplaytest" dbase="mysql">
+		<listeners>
+			<listener port="9000" socket="/tmp/test.socket"/>
+		</listeners>
                 <translations>
                         <translation module="normalize"/>
                 </translations>
