--- a/test/sqlrelay.conf.d/sap.conf.in
+++ b/test/sqlrelay.conf.d/sap.conf.in
@@ -1,7 +1,10 @@
 <?xml version="1.0"?>
 <instances>
 
-	<instance id="saptest" port="9000" socket="/tmp/test.socket" dbase="sap">
+	<instance id="saptest" dbase="sap">
+		<listeners>
+			<listener port="9000" socket="/tmp/test.socket"/>
+		</listeners>
 		<connections>
 			<connection string="sybase=/opt/sap;lang=en_US;server=SAP;user=testuser;password=testpassword;db=@HOSTNAME@"/>
 		</connections>
